@@ -20,6 +20,8 @@ Most routines have all four precisions:
 single (s), double (d), single-complex (c), double-complex (z).
 
  1.x
+    * Merge libmagmablas into libmagma to eliminate circular dependencies.
+      Link with just -lmagma now.
     * Add multi-GPU Hessenberg and non-symmetric eigenvalue routines:
       geev_m, gehrd_m, unghr_m, ungqr_m.
     * Fix required workspace size in gels_gpu, gels3_gpu, geqrs_gpu, geqrs3_gpu.
